deployment-mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app.kubernetes.io/name: mariadb
  annotations:
    polaris.fairwinds.com/runAsRootAllowed-exempt: true  
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mariadb
      tier: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mariadb
        tier: db
    spec:
      containers:
      - name: mariadb
        image: mariadb:lts
        ports:
        - containerPort: 3306
          name: mariadb
        volumeMounts:
        - name: dbdata
          mountPath: "/var/lib/mysql"
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        securityContext:
          allowPrivilegeEscalation: false
      volumes:
      - name: dbdata
        persistentVolumeClaim:
          claimName: dbdata
