service-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
   name: mariadb
   labels:
     app.kubernetes.io/name: mariadb
spec:
  ports:
  - port: 3306
    targetPort: 3306
    name: mariadb
  selector:
    app.kubernetes.io/name: mariadb
    tier: db
  type: ClusterIP
