wordpress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
   app.kubernetes.io/name: wordpress
spec:
  ports:
    - port: 80
  selector:
    app.kubernetes.io/name: wordpress
    tier: web
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app.kubernetes.io/name: wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: wordpress
      tier: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wordpress
        tier: web
    spec:
      containers:
      - name: wordpress
        image: wordpress:php8.3
        resources:
          requests:
            memory: "512Mi"
            cpu: "100m"
          limits:
            memory: "2Gi"
            cpu: "500m"
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: wwwdata
          mountPath: /var/www/html
      volumes:
      - name: wwwdata
        persistentVolumeClaim:
          claimName: wwwdata
