ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: christopher.farhood.org
spec:
  rules:
  - host: christopher.farhood.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  wordpress
            port:
              number: 80
  tls:
  - hosts:
    - christopher.farhood.org
    secretName: farhood-org-cert-letsencrypt-prod
